chore(landing-page): z-index issue in mobile view

--- a/profiles/landing-page/resources/css/landing-page.css
+++ b/profiles/landing-page/resources/css/landing-page.css
@@ -128,6 +128,7 @@ header.row {
 }
 
 .hero {
+    z-index: 0;
     color: var(--jinks-colors-light);
     display: flex;
     flex-direction: row;
